--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "apexcharts": "^4.0.0",
-    "vue": "^3.5.12",
+    "vue-template-compiler": "^0.1.0",
     "vue3-apexcharts": "^1.7.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue": "^5.2.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
+    "vue": "^3.5.13",
     "vue-tsc": "^2.1.8"
   }
 }
